# rfid_simulator_test

./: CMakeLists.txt  README.md  package.xml
config/: map.yaml  warehouse_map.pgm
config/amcl/: amcl.yaml
config/gmapping/: gmapping.yaml
config/move_base/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml
config/rviz/: settings.rviz
launch/: navigation_with_amcl.launch  navigation_with_gmapping.launch  pioneer3atRFID.launch  simulation.launch
src/: collect_data.cpp  moveAntenna.cpp
urdf/: pioneer3at.xacro  robot_with_laser_and_antenna.urdf.xacro
urdf/antenna/: antenna.urdf.xacro  antenna_macro.xacro
urdf/tag/: tag.urdf.xacro  tag.xacro  tag_macro.xacro
